# gosh-ipi

./: Cargo.toml
src/: cli.rs  client.rs  codec.rs  ipi.rs  lib.rs  main.rs  proxy.rs  rest.rs  socket.rs  task.rs
src/rest/: client.rs  server.rs
