# [[file:ipi.note::fe91b07f][fe91b07f]]
[package]
name = "gosh-ipi"
version = "0.0.3"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
#===========
gosh-core = { version = ">=0.0.3", features=["adhoc"] }
gosh-model = { version = ">=0.0.14", features=["adhoc"] }
#===========
clap = {version="3", features = ["derive"]}
fs2 = "0.4.3"
axum = "0.4.6"

[dev-dependencies]

[features]
# for easy development
adhoc = []

# workspace independent
# [workspace]
# fe91b07f ends here
