# [[file:ipi.note::fe91b07f][fe91b07f]]
[package]
name = "gosh-ipi"
version = "0.0.7"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
#===========
gosh-core = { version = "0.1", features=["adhoc"] }
gosh-model = { version = "0.1", features=["adhoc"] }
gosh-remote = { version = "0.1", features=["adhoc"] }
#===========
clap = {version="3", features = ["derive"]}
axum = "0.4.6"
serde_json = "1"
serde = {version="1.0", features = ["derive"]}
reqwest = { version="0.11", default-features = false, features=["json", "rustls-tls"]}

[dev-dependencies]

[features]
# for easy development
adhoc = []

# workspace independent
# [workspace]
# fe91b07f ends here
